package be.kdg.talenten.domain;

public class Leerkracht {
}
