@startuml

hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

title Domeinmodel Talentontwikkeling - versie 1

class Leerling {
  - id: Long
  - voornaam: String
  - achternaam: String
  - klas: String
}

class Leerkracht {
  - id: Long
  - naam: String
  - email: String
}

class Talent {
  - id: Long
  - naam: String
  - beschrijving: String
}

class TalentenPeriode {
  - id: Long
  - naam: String
  - startDatum: LocalDate
  - eindDatum: LocalDate
}

class IngerichtTalent {
  - id: Long
  - maxCapaciteit: int
}

class Voorkeur {
  - id: Long
  - voorkeurNummer: int
}

class Toewijzing {
  - id: Long
  - toewijzingsType: ToewijzingsType
  - toegewezenOp: LocalDateTime
  - gewijzigdOp: LocalDateTime
}

enum ToewijzingsType {
  AUTOMATISCH
  MANUEEL
}

'-------------------------------
' Talentaanbod
'-------------------------------

TalentenPeriode "1" -- "0..*" IngerichtTalent : bevat
Talent "1" -- "0..*" IngerichtTalent : is basis voor
Leerkracht "0..2*" -- "0..1*" IngerichtTalent : begeleidt

'-------------------------------
' Voorkeuren
'-------------------------------

Leerling "1" -- "0..*" Voorkeur : geeft op
TalentenPeriode "1" -- "0..*" Voorkeur : hoort bij
Voorkeur "*" -- "1" IngerichtTalent : verwijst naar

'-------------------------------
' Toewijzingen
'-------------------------------

Leerling "1" -- "0..*" Toewijzing : krijgt
Toewijzing "*" -- "1" IngerichtTalent : wijst toe aan

'-------------------------------
' Businessregel-notities
'-------------------------------

note right of Voorkeur
  Per leerling per talentenperiode
  exact 3 voorkeuren.

  voorkeurNummer is 1, 2 of 3.

  De drie voorkeuren moeten naar
  verschillende ingerichte talenten verwijzen.

  Het gekozen IngerichtTalent moet
  tot dezelfde TalentenPeriode behoren.
end note

note bottom of Toewijzing
  Een Toewijzing koppelt één Leerling
  aan één IngerichtTalent.

  De TalentenPeriode wordt afgeleid via
  het gekoppelde IngerichtTalent.
end note

note bottom of IngerichtTalent
  Het aantal Toewijzingen naar dit
  IngerichtTalent mag de maxCapaciteit
  niet overschrijden.
end note

@enduml